<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_display_score"
        android:icon="@drawable/scoreboard"
        android:title="@string/action_display_score"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_save_game"
        android:icon="@drawable/save_button"
        android:title="@string/action_save_game"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_get_help"
        android:icon="@drawable/help"
        android:title="@string/action_get_help"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_display_deck_pile"
        android:icon="@drawable/show_deck_pile"
        android:title="@string/action_settings"
        app:showAsAction="always"/>




</menu>