<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <!--Label: Scores-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:text="@string/label_score"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_dark"
                android:textAlignment="gravity"/>
        </LinearLayout>

        <!--Label Human and Computer-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:text="@string/label_human"
                android:gravity="center_horizontal"
                android:textColor="@android:color/holo_red_dark"
                android:textAlignment="gravity"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:text="@string/label_computer"
                android:textColor="@android:color/holo_red_dark"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"/>
        </LinearLayout>

        <!--Label Last Round scores-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:gravity="center_horizontal"
                android:text="@string/label_last_round"
                android:textColor="@android:color/holo_red_dark"
                android:textAlignment="gravity"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:gravity="center_horizontal"
                android:text="@string/label_score_nil"
                android:textAlignment="gravity"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:text="@string/label_score_nil"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"/>
        </LinearLayout>

        <!--Label Tournament Scores-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:gravity="center_horizontal"
                android:text="@string/label_tournament"
                android:textColor="@android:color/holo_red_dark"
                android:textAlignment="gravity"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:text="@string/label_score_nil"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:fontFamily="@font/batmanforever"
                android:text="@string/label_score_nil"
                android:gravity="center_horizontal"
                android:textAlignment="gravity"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>